--- a/contact-us.html
+++ b/contact-us.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>About - SlayWithUs.</title>
-  <link rel="icon" href="./images/favicon.ico">
+    <title>Privacy Policy-SlayWithUs.</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
   <!-- Custom Css -->
@@ -185,19 +184,11 @@
     </div>
   </section>
 
-  <!-- =============About Us============= -->
- <section class="about-us container py-5 text-center">
-  <div class="row justify-content-center">
-    <p class="text-center bredcrumb"><a href="index.html">Slaywithus.</a>><span>About Us</span></p>
-    <h4 class="about-heading">About Us</h4>
-    <div class="col text-md-start text-center">
-      <h2 class="sub-heading text-start my-4">KNOW THE SLAYERS!!</h2>
-      <p class="my-3">•Your very own Jigyansa and Mithila are “Virtual Fashionistas” by their own choice and passion. The ability to mix-match varied hues with innumerable outfits on ample occasions led the two sisters to collaborate and start their totally unique concept of “Virtual styling” for the very first time in India.</p>
-      <p class="my-5">•Furthermore, Jigyansa is a Banker by profession and Mithila is a Human resource Consultant. Both the sisters have a flair for writing and Jigyansa has even authored an online book “STAGGERED” in the year 2020.Spending their formative years in Bhubaneswar and eventually living in Maharashtra, the United States and United Kingdom helped them to gain a global exposure that led to the inception of their virtual styling idea.</p>
-      <p class="my-3">•Their vision is to create a “Fashionable India” for women from 18-60 plus years age group who come across this tumultuous question in their everyday life “What to wear”.</p>
-    </div>
-  </div>
- </section>
+  <!-- =============contact us============= -->
+  <section class="contact-us">
+
+  </section>
+
 
      <!-- ==============footer============ -->
   <footer class="container-fluid">
